my name is added

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <h1>Jasurbek</h1>
-=======
-    <h1>It Works!</h1>
+
+    <h1>Mardonbek</h1>
 
     <h1>Gofurbek</h1>
-=======
+
 <h1>anvarjon</h1>
 
 </body>
